--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ nav {
         text-align: center;
         padding: 1rem;
         font-size: 1.2rem;
-        background-color: white;
+        background-color: rgba(255, 255, 255, .95);
         border: 2px solid black;
       }
 
