--- a/style.css
+++ b/style.css
@@ -103,7 +103,6 @@ a:hover {
         -webkit-transform: translate3d(0, 0, 0);
         -moz-transform: translate3d(0, 0, 0);
         transform: translate3d(0, 0, 0);
-         background-color: #8a8a8a; 
         z-index: 0;
         justify-content: center;
       }
@@ -185,8 +184,10 @@ circle {
 /* End Geo 1 */
 
 .title-dek {
-  /*padding-top: 100px;*/
-  margin: 10rem;
+  padding-top: 0;
+  margin-top: 0;
+  margin-left: 10rem;
+  margin-right: 10rem;
 }
 
 
